force-app/main/default/objects/Sellitem__c/Sellitem__c.object-meta.xml
<CustomObject>
    <label>SellItem</label>
    <nameField>
        <label>SellItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SellItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>