force-app/main/default/objects/Sellitem__c/fields/Sellitem_Price__c.field-meta.xml
<CustomField>
    <fullName>SellItem_Price__c</fullName>
    <label>SellItem Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>