force-app/main/default/objects/Sellitem__c/fields/Sellitem_Stock__c.field-meta.xml
<CustomField>
    <fullName>SellItem_Stock__c</fullName>
    <label>SellItem Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>