force-app/main/default/objects/Sellitem__c/fields/Total_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Price__c</fullName>
    <formula>SellItem_Price__c  *  SellItem_Stock__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>