force-app/main/default/objects/Sellitem__c/validationRules/VALIDATION_1.validationRule-meta.xml
<ValidationRule>
    <fullName>VALIDATION_1</fullName>
    <active>true</active>
    <errorConditionFormula>SellItem_Stock__c &gt; Merchandise__r.Merchandise_Stock__c</errorConditionFormula>
    <errorMessage>Sorry we are out of stock :(</errorMessage>
</ValidationRule>